--- a/Project/FinalProject/FinalProject/FinalProject.csproj
+++ b/Project/FinalProject/FinalProject/FinalProject.csproj
@@ -9,11 +9,12 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>FinalProject</RootNamespace>
     <AssemblyName>FinalProject</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -55,6 +56,25 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Client\AbstractFilter.cs" />
+    <Compile Include="Client\AbstractMember.cs" />
+    <Compile Include="Client\AuthorFilter.cs" />
+    <Compile Include="Client\Client.cs" />
+    <Compile Include="Client\GenreFilter.cs" />
+    <Compile Include="Client\IMember.cs" />
+    <Compile Include="Client\ISearchFilter.cs" />
+    <Compile Include="Client\Member.cs" />
+    <Compile Include="Client\PriceFilter.cs" />
+    <Compile Include="Client\PublisherFilter.cs" />
+    <Compile Include="Resource\AbstractBook.cs" />
+    <Compile Include="Resource\Book.cs" />
+    <Compile Include="Resource\IBook.cs" />
+    <Compile Include="Resource\Magazine.cs" />
+    <Compile Include="Resource\StockLock.cs" />
+    <Compile Include="Store\BookFactory.cs" />
+    <Compile Include="Store\BookProducer.cs" />
+    <Compile Include="Store\Store.cs" />
+    <Compile Include="Store\SubscriptionObserver.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -95,6 +115,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
